k8s/base/ingress/ingress-api.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stocktaking-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - api.example.com
    secretName: stocktaking-tls
  rules:
  - host: api.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stocktakingbackend
          servicePort: 80
