k8s/base/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stocktaking-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - example.com
    secretName: stocktaking-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: stocktakingweb
          servicePort: 80
